2005-07-08 01:22  Andrej Kacian <andrej@kacian.sk>
	* README: Updated

2005-07-08 01:00  Andrej Kacian <andrej@kacian.sk>
	* src: silc-channel.c, clientops.c, silc-channel-connection.h,
	       silc-channel.h, silc-client.c, clientops-notify.c,
	       silc-message.c, silc-local-presence.c,
	       silc-gateway-connection.c, Makefile.am, silc.c,
	       silc-channel-connection.c: Update to work with current irssi2

2005-06-28 23:05  Andrej Kacian <andrej@kacian.sk>
	* AUTHORS, README: Added some basic documentation.

2005-06-28 21:56  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops.c, silc-channel.c, silc-presence.h,
	       clientops-notify.c, silc-client.c, support.c, support.h,
	       silc-local-presence.c, silc-local-presence.h, base64.c,
	       base64.h, Makefile.am, silc.c, silc-gateway-connection.c,
	       silc-gateway-connection.h, silc-presence.c: Custom SILC keys
	       can now be used by clients.

2005-06-20 14:03  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-channel.c, silc-presence.[ch],
	  clientops-notify.c: Moved userhost string creation to a separate
	  function

2005-06-20 13:37  Andrej Kacian <andrej@kacian.sk>
	* src: silc-channel.c, clientops.c silc-presence.c: Wrote some
	  groundwork for WHOIS

2005-06-13 02:05  Andrej Kacian <andrej@kacian.sk>
	* src/clientops.c: Set internal channel topic on join.

2005-06-13 01:58  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops-notify.c, silc-client.c: Handle channel topic
	  set event.

2005-06-13 00:48  Andrej Kacian <andrej@kacian.sk>
	* src/clientops-notify.c: Break up server MOTD into lines and send
	  each line in a separate gateway_motd event, last followed by
	  gateway_motd_end event.

2005-06-13 00:03  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-client.c, clientops-notify.c, silc-client.h
	  silc-presence.c: Implement own nickname changing.

2005-06-11 02:01  Andrej Kacian <andrej@kacian.sk>